[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/kenney/ThemeIconButton.gd" type="Script" id=1]
[ext_resource path="res://addons/kenney/assetpalette.gd" type="Script" id=2]
[ext_resource path="res://addons/kenney/MeshLibraryPalette.gd" type="Script" id=3]

[sub_resource type="Image" id=3]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 3 )
size = Vector2( 16, 16 )

[node name="AssetPaletteContainer" type="HBoxContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AssetLibrary" type="VBoxContainer" parent="."]
margin_right = 1015.0
margin_bottom = 600.0
rect_min_size = Vector2( 235, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="HBoxContainer" parent="AssetLibrary"]
margin_right = 1015.0
margin_bottom = 20.0
size_flags_horizontal = 3
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AssetLibrary/GridContainer"]
margin_left = 863.0
margin_top = 3.0
margin_right = 906.0
margin_bottom = 17.0
text = "Assets"

[node name="VSeparator" type="VSeparator" parent="AssetLibrary/GridContainer"]
margin_left = 910.0
margin_right = 914.0
margin_bottom = 20.0

[node name="MenuButton" type="MenuButton" parent="AssetLibrary/GridContainer"]
margin_left = 918.0
margin_right = 1015.0
margin_bottom = 20.0
text = "Kenney Tools"
items = [ "Cursor Rotate X", null, 0, false, false, 0, 0, null, "", false, "Cursor Rotate Y", null, 0, false, false, 1, 0, null, "", false, "Cursor Rotate Z", null, 0, false, false, 2, 0, null, "", false, "Cursor Back Rotate X", null, 0, false, false, 3, 0, null, "", false, "Cursor Back Rotate Y", null, 0, false, false, 4, 0, null, "", false, "Cursor Back Rotate Z", null, 0, false, false, 5, 0, null, "", false, "", null, 0, false, false, 6, 0, null, "", true, "About Kenney Tools", null, 0, false, false, 7, 0, null, "", false ]

[node name="HBoxContainer" type="HBoxContainer" parent="AssetLibrary"]
margin_top = 24.0
margin_right = 1015.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="SearchBox" type="LineEdit" parent="AssetLibrary/HBoxContainer"]
margin_right = 951.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 0
editable = false
placeholder_text = "Filter assets"

[node name="ModeThumbnail" type="Button" parent="AssetLibrary/HBoxContainer"]
margin_left = 955.0
margin_right = 983.0
margin_bottom = 24.0
toggle_mode = true
pressed = true
icon = SubResource( 2 )
flat = true
script = ExtResource( 1 )
theme_icon = "FileThumbnail"

[node name="ModeList" type="Button" parent="AssetLibrary/HBoxContainer"]
margin_left = 987.0
margin_right = 1015.0
margin_bottom = 24.0
toggle_mode = true
icon = SubResource( 2 )
flat = true
script = ExtResource( 1 )
theme_icon = "FileList"

[node name="IconSize" type="HSlider" parent="AssetLibrary"]
margin_top = 52.0
margin_right = 1015.0
margin_bottom = 68.0
size_flags_horizontal = 3
min_value = 0.2
max_value = 4.0
step = 0.1
value = 1.0

[node name="MeshLibraryPalette" type="ItemList" parent="AssetLibrary"]
margin_top = 72.0
margin_right = 1015.0
margin_bottom = 458.0
size_flags_vertical = 3
max_text_lines = 2
max_columns = 0
fixed_column_width = 96
icon_mode = 0
fixed_icon_size = Vector2( 64, 64 )
script = ExtResource( 3 )

[node name="InfoMessage" type="Label" parent="AssetLibrary/MeshLibraryPalette"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.859833
margin_top = -0.859833
margin_right = 0.859863
margin_bottom = 7.14014
rect_min_size = Vector2( 100, 0 )
mouse_filter = 0
size_flags_horizontal = 15
size_flags_vertical = 7
text = "Double click here to add a MeshLibrary to the Assets list"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding" type="Control" parent="AssetLibrary"]
margin_top = 462.0
margin_right = 1015.0
margin_bottom = 467.0
rect_min_size = Vector2( 0, 5 )

[node name="ItemList" type="ItemList" parent="AssetLibrary"]
margin_top = 471.0
margin_right = 1015.0
margin_bottom = 591.0
rect_min_size = Vector2( 0, 120 )
size_flags_horizontal = 3
allow_rmb_select = true
auto_height = true
same_column_width = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding2" type="Control" parent="AssetLibrary"]
margin_top = 595.0
margin_right = 1015.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding" type="Control" parent="."]
margin_left = 1019.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 5, 0 )
[connection signal="pressed" from="AssetLibrary/HBoxContainer/ModeThumbnail" to="." method="_on_ModeThumbnail_pressed"]
[connection signal="pressed" from="AssetLibrary/HBoxContainer/ModeList" to="." method="_on_ModeList_pressed"]
[connection signal="value_changed" from="AssetLibrary/IconSize" to="." method="_on_IconSize_value_changed"]
[connection signal="gui_input" from="AssetLibrary/MeshLibraryPalette" to="." method="_on_MeshLibraryPalette_gui_input"]
[connection signal="gui_input" from="AssetLibrary/MeshLibraryPalette/InfoMessage" to="." method="_on_InfoMessage_gui_input"]
